--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <section id="about">
         <div class="container">
-            <img src="" alt="Profile Photo">
+            <img src="./images/profile.jpg" alt="Profile Photo">
             <h1>Tyler Gorton</h1>
             <p style="font-family: 'Courier New', Courier, monospace; color: brown">Software Engineering Student at Iowa State University</p>
             <p>
@@ -42,14 +42,14 @@
         <div class="container">
             <h2>Projects</h2>
             <div class="project">
-                <img src="images/project1.png" alt="Project 1"></img>
+                <img src="./images/project1.png" alt="Project 1"></img>
                 <h3>Project 1</h3>
                 <p>
                     In SE 319 we did this project where we developed a portfolio web page using HTML and CSS.
                 </p>
             </div>
             <div class="project">
-                <img src="images/project2.png" alt="Project 2" width="400">
+                <img src="./images/project2.png" alt="Project 2" width="400">
                 <h3>Project 2</h3>
                 <p>
                     In CS 327 we have a project to develop a Pokemon-like game with ASCII graphics.
