--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <section id="about">
         <div class="container">
-            <img src="./images/profile.jpg" alt="Profile Photo">
+            <img src="./images/profile.jpg" alt="Profile Photo" width="250">
             <h1>Tyler Gorton</h1>
             <p style="font-family: 'Courier New', Courier, monospace; color: brown">Software Engineering Student at Iowa State University</p>
             <p>
